--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "system-monitor-electron",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
+    "build": "cross-env NODE_ENV=production node ./.build/build.js && electron-builder --project ./dist/ ",
     "dev": "cross-env NODE_ENV=development node ./.build/dev-watch.js"
   },
   "repository": {
@@ -21,16 +22,19 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "babel-loader": "^8.0.4",
-    "chalk": "^2.4.1",
-    "cross-env": "^5.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2"
-  },
-  "dependencies": {
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "chalk": "^2.4.1",
+    "copyfiles": "^2.1.0",
+    "cross-env": "^5.2.0",
     "del": "^3.0.0",
     "electron": "^3.0.10",
-    "ps-tree": "^1.2.0"
-  }
+    "electron-builder": "^20.38.2",
+    "html-webpack-plugin": "^3.2.0",
+    "ps-tree": "^1.2.0",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.1.4"
+  },
+  "dependencies": {},
+  "build": {}
 }
