--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "electron-widevinecdm": "^7.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
