--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/core": "^7.1.6",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
+    "@types/electron": "^1.6.10",
+    "@types/node": "^10.12.18",
     "babel-loader": "^8.0.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "chalk": "^2.4.1",
@@ -32,10 +34,13 @@
     "electron-builder": "^20.38.2",
     "html-webpack-plugin": "^3.2.0",
     "ps-tree": "^1.2.0",
+    "ts-loader": "^5.3.3",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.1.4"
   },
-  "dependencies": {},
+  "dependencies": {
+    "typescript": "^3.2.4"
+  },
   "build": {}
 }
