提交的代码

--- a/src/render/tsconfig.json
+++ b/src/render/tsconfig.json
@@ -1,8 +1,9 @@
 {
-  "compileOnSave": false,
+  "compileOnSa": false,
   "compilerOptions": {
     "target": "es2015",
-    "moduleResolution": "node",
+    "moduleResolution": "classic",
+    "lib": ["es2015", "es6", "es7", "esnext", "dom"],
     "pretty": true,
     "newLine": "LF",
     "allowSyntheticDefaultImports": true,
@@ -14,5 +15,5 @@
     "allowJs": true,
     "jsx": "preserve"
   },
-  "exclude": ["node_modules", "src/main"]
+  "exclude": ["node_modules", "sr/main"]
 }
