--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "target": "es2015",
     "moduleResolution": "node",
+    "lib": ["es2015", "es6", "es7", "esnext"],
     "pretty": true,
     "newLine": "LF",
     "allowSyntheticDefaultImports": true,
